# artlib-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
artlib_studio/: events.py  instrumented_art.py  streamlit_app.py
artlib_studio/adapters/: fuzzy_art.py  gaussian_art.py  hypersphere_art.py
artlib_studio/apps/: streamlit_app.py
artlib_studio/apps/components/: __init__.py  composition_view.py  graph_composer.py
artlib_studio/composition/: __init__.py  association_memory.py  builder.py  config.py  context.py  edges.py  events.py  graph.py  module.py  scheduler.py  signals.py  transforms.py
artlib_studio/core/: capabilities.py  events.py  model_adapter.py  recorder.py  registry.py
artlib_studio/graph_canvas_component/: __init__.py
artlib_studio/graph_canvas_component/frontend/: package-lock.json  package.json  vite.config.ts
artlib_studio/graph_canvas_component/frontend/src/: ARTGraphCanvas.tsx  index.css  index.tsx
artlib_studio/instrumentation/: instrumented_art.py
artlib_studio/visualization/: category_geometry.py  competition_table.py  composition_trace.py  explanations.py  internals.py  match_vigilance.py  process_tracker.py  search_history.py  timeline_state.py
docs/: architecture.md  composition.md  execution_explorer.md  roadmap.md  setup.md  vision.md
examples/: bidirectional_expectation_demo.py  composition_protocol_demo.py  export_bidirectional_trace.py  export_fuzzy_art_trace.py  export_modulatory_trace.py  export_two_level_composition_trace.py  list_available_models.py  minimal_fuzzy_art.py  modulatory_vigilance_demo.py  run_composition_config.py  trace_fuzzy_art_step_by_step.py  two_level_fuzzy_art_pipeline.py
examples/configs/: bidirectional_expectation.yaml  modulatory_vigilance.yaml  two_level_fuzzy_art.json  two_level_fuzzy_art.yaml
scripts/: check_environment.py
tests/: conftest.py  test_composition.py  test_composition_config.py  test_instrumented_fuzzy_art.py  test_modulation.py  test_timeline.py  test_visualization.py
