[project]
name = "artlib-studio"
version = "0.1.0"
description = "Interactive visualization and exploration studio for AdaptiveResonanceLib (ART neural networks)"
requires-python = ">=3.11"
dependencies = [
    "artlib",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "streamlit",
    "pyyaml",
]

[tool.uv.sources]
artlib = { path = "../AdaptiveResonanceLib", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/OgnjenX/artlib-studio"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["artlib_studio*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"artlib_studio.graph_canvas_component" = [
    "frontend/build/*",
    "frontend/build/**/*",
]

[[tool.streamlit.component.components]]
name = "artlib_studio_graph_canvas"
asset_dir = "graph_canvas_component/frontend/build"
